# ks-vaudit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.en.md  README.md  simple-build-and-install
buildrpm/: README  ks-vaudit.spec  kylin-3-x86-64.cfg  make-spec-by-mock.sh  make-spec.sh
buildrun/: README.md  generate-run.sh  ks-run.sh
buildrun/ks-run/: install.sh
buildrun/ks-run/ks-vaudit/KY3.2/: install-ks-vaudit.sh
data/: ks-vaudit.desktop  ks-vaudit.metainfo.xml
data/man/: ks-vaudit.1  ssr-glinject.1
data/resources/: about.htm
src/: CMakeLists.txt  Global.h  KyNotify.cpp  KyNotify.h  KyNotifyInterface.cpp  KyNotifyInterface.h  Main.cpp  Recording.cpp  Recording.h  SimpleScreenRecorder.pro  fixx11h.h  kidletime.cpp  kidletime.h  xsyncbasedpoller.cpp  xsyncbasedpoller.h
src/AV/: AVWrapper.cpp  AVWrapper.h  FastScaler.cpp  FastScaler.h  SourceSink.cpp  SourceSink.h
src/AV/Input/: PulseAudioInput.cpp  PulseAudioInput.h  X11Input.cpp  X11Input.h
src/AV/Output/: AudioEncoder.cpp  BaseEncoder.cpp  BaseEncoder.h  Muxer.cpp  NvEncoder.cpp  NvEncoder.h  NvEncoderGL.cpp  NvEncoderGL.h  OutputManager.cpp  OutputManager.h  OutputSettings.h  SyncDiagram.cpp  Synchronizer.cpp  Synchronizer.h  VideoEncoder.cpp
src/common/: CommandLineOptions.cpp  CommandLineOptions.h  Config.cpp  Config.h  Logger.cpp  Logger.h  common-definition.h
src/daemon/: CMakeLists.txt
src/daemon/configure/: CMakeLists.txt  README  general-configure.cpp  main.cpp  sql-configure.cpp  vaudit-configure.cpp
src/daemon/configure/data/: CMakeLists.txt  com.kylinsec.Kiran.VauditConfigure.conf  com.kylinsec.Kiran.VauditConfigure.service  com.kylinsec.Kiran.VauditConfigure.xml  ks-vaudit-configure
src/daemon/configure/include/: general-configure.h  ksvaudit-configure_global.h  sql-configure.h  vaudit-configure.h
src/daemon/monitor/: CMakeLists.txt  main.cpp  monitor-disk.cpp  monitor.cpp
src/daemon/monitor/data/: CMakeLists.txt  ks-vaudit-monitor
src/daemon/monitor/include/: monitor-disk.h  monitor.h
src/daemon/notify/: CMakeLists.txt  audit-notify.cpp  main.cpp  record-notify.cpp
src/daemon/notify/include/: audit-notify.h  record-notify.h
src/translations/: CMakeLists.txt  ks-vaudit_ar.ts  ks-vaudit_bg.ts  ks-vaudit_cs.ts  ks-vaudit_de.ts  ks-vaudit_el.ts  ks-vaudit_es.ts  ks-vaudit_fr.ts  ks-vaudit_gl.ts  ks-vaudit_he.ts  ks-vaudit_hu.ts  ks-vaudit_id.ts  ks-vaudit_it.ts  ks-vaudit_ja.ts  ks-vaudit_lt.ts  ks-vaudit_nl.ts  ks-vaudit_pl.ts  ks-vaudit_pt_BR.ts  ks-vaudit_ru.ts  ks-vaudit_sk.ts  ks-vaudit_sr.ts  ks-vaudit_sv.ts  ks-vaudit_uk.ts  ks-vaudit_zh_CN.ts  ks-vaudit_zh_TW.ts  list.txt
src/ui/: CMakeLists.txt
src/ui/audit/: CMakeLists.txt
src/ui/audit/data/: CMakeLists.txt  ks-vaudit-audit.desktop.in
src/ui/audit/src/: CMakeLists.txt  activate-page.cpp  activate-page.h  dialog.cpp  dialog.ui  login.cpp  login.h  login.ui  main.cpp  widget.cpp  widget.h  widget.ui
src/ui/audit/translations/: CMakeLists.txt  ks-vaudit-audit.zh_CN.ts
src/ui/ks-vaudit-audit/: CMakeLists.txt
src/ui/ks-vaudit-audit/data/: CMakeLists.txt  ks-vaudit-audit.qss  src.qrc
src/ui/ks-vaudit-audit/src/: CMakeLists.txt  activate-page.cpp  activate-page.h  dialog.cpp  dialog.h  dialog.ui  login.cpp  login.h  login.ui  main.cpp  widget.cpp  widget.h  widget.ui
src/ui/ks-vaudit-record/: CMakeLists.txt
src/ui/ks-vaudit-record/data/: CMakeLists.txt  com.kylinsec.Kiran.VauditConfigure.xml  ks-vaudit-record.desktop.in  ks-vaudit-record.qss  src.qrc
src/ui/ks-vaudit-record/data/images/: resources.qrc
src/ui/ks-vaudit-record/src/: CMakeLists.txt  activate-page.cpp  activate-page.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  widget.cpp  widget.h  widget.ui
src/ui/record/: CMakeLists.txt
src/ui/record/data/: CMakeLists.txt  src.qrc
src/ui/record/src/: CMakeLists.txt  activate-page.cpp  activate-page.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  widget.cpp  widget.h  widget.ui
src/ui/record/translations/: CMakeLists.txt  ks-vaudit-record.zh_CN.ts
src/ui/vaudit-license/: CMakeLists.txt  dbus-utils.cpp  dbus-utils.h  license-entry.cpp  license-entry.h  license.h
ui/: CMakeLists.txt
ui/ks-vaudit-record/: CMakeLists.txt  dialog.cpp  dialog.ui  ks-vaudit-record.pro  ks-vaudit-record.qss  src.qrc  widget.cpp  widget.h  widget.ui
